--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "saju_web",
+  "name": "saju-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "ts-lint": "tsc --noEmit --incremental --watch"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.9",
-    "@mantine/dates": "^4.2.9",
-    "@mantine/form": "^4.2.9",
-    "@mantine/hooks": "^4.2.9",
-    "@mantine/modals": "^4.2.9",
-    "@mantine/next": "^4.2.9",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
-    "next": "12.1.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.8.3",
+    "@mantine/dates": "^5.8.3",
+    "@mantine/form": "^5.8.3",
+    "@mantine/hooks": "^5.8.3",
+    "@mantine/next": "^5.8.3",
+    "@mantine/notifications": "^5.8.3",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.6",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.1",
-    "zustand": "^4.0.0-rc.1"
-  },
-  "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.7.3"
+    "typescript": "4.9.3"
   }
 }
