--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^5.8.3",
     "@mantine/next": "^5.8.3",
     "@mantine/notifications": "^5.8.3",
+    "@tabler/icons": "^1.114.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -26,6 +27,10 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-portal": "^4.2.2",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/react-portal": "^4.0.4"
   }
 }
