--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "lodash": "^4.17.21",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react-portal": "^4.0.4"
   }
 }
