--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-portal": "^4.2.2",
+    "react-query": "^3.39.2",
     "typescript": "4.9.3"
   },
   "devDependencies": {
