--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "18.2.0",
     "react-portal": "^4.2.2",
     "react-query": "^3.39.2",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
