--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^5.8.3",
     "@mantine/next": "^5.8.3",
     "@mantine/notifications": "^5.8.3",
+    "@next/font": "^13.0.7",
     "@tabler/icons": "^1.114.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
