--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-portal": "^4.2.2",
     "react-query": "^3.39.2",
+    "react-string-replace": "^1.1.0",
     "typescript": "4.9.3",
     "zustand": "^4.1.5"
   },
