--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mantine/hooks": "^5.8.3",
     "@mantine/next": "^5.8.3",
     "@mantine/notifications": "^5.8.3",
-    "@next/font": "^13.0.7",
+    "@next/font": "^13.0.5",
     "@tabler/icons": "^1.114.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -34,7 +34,7 @@
     "react-query": "^3.39.2",
     "react-string-replace": "^1.1.0",
     "typescript": "4.9.3",
-    "zustand": "^4.1.5"
+    "zustand": "4.1.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
