--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,14 @@
 /.pnp
 .pnp.js
 /.yarn
-.yarnrc.yml
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 
 # testing
 /coverage
