--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
     "next": "13.0.5",
     "react": "18.2.0",
