feat: :sparkles: result 페이지 업데이트

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons": "^1.114.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
@@ -30,6 +31,7 @@
     "lodash": "^4.17.21",
     "next": "13.0.5",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-portal": "^4.2.2",
     "react-query": "^3.39.2",
