fix: :sparkles: add relation component

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3030",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predev": "caddy reverse-proxy --from localhost:443 --to localhost:3030 &"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -40,6 +41,7 @@
     "zustand": "4.1.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@types/lodash": "^4.14.191",
     "@types/react-portal": "^4.0.4"
   },
