--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@mantine/notifications": "^5.10.5",
     "@next/font": "^13.0.5",
     "@tabler/icons": "^1.114.0",
+    "@types/downloadjs": "^1.4.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
+    "downloadjs": "^1.4.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "html-to-image": "^1.11.11",
