--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "downloadjs": "^1.4.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
-    "html-to-image": "^1.11.11",
+    "html-to-image": "1.11.5",
     "lodash": "^4.17.21",
     "next": "13.0.5",
     "react": "18.2.0",
