--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.0.25",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.9",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "downloadjs": "^1.4.7",
